# Rustacle

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml
.cargo/: config.toml
.claude/: settings.local.json
.claude/skills/git-commit-helper/: README.md  SKILL.md
.claude/skills/readme-updater/: README.md
.github/workflows/: ci.yml
crates/rustacle-agent/: Cargo.toml
crates/rustacle-agent/src/: lib.rs  turn_context.rs
crates/rustacle-agent/src/harness/: cancel.rs  loop.rs  mod.rs  streaming.rs
crates/rustacle-agent/src/prompt/: golden_tests.rs  layers.rs  mod.rs  registry.rs  tools.rs
crates/rustacle-agent/src/prompt/snapshots/: rustacle_agent__prompt__golden_tests__prompt_is_byte_identical_for_fixed_context.snap
crates/rustacle-agent/src/prompt/text/: overlay_anthropic.md  overlay_anthropic.txt  overlay_ask_mode.md  overlay_ask_mode.txt  overlay_local.md  overlay_local.txt  overlay_openai.md  overlay_openai.txt  overlay_plan_mode.md  overlay_plan_mode.txt  role_analyst.md  role_analyst.txt  role_blogger.md  role_blogger.txt  role_designer.md  role_designer.txt  role_developer.md  role_developer.txt  role_devops.md  role_devops.txt  role_manager.md  role_manager.txt  role_student.md  role_student.txt  section_actions.md  section_actions.txt  section_bash_safety.md  section_bash_safety.txt  section_cyber_boundary.md  section_cyber_boundary.txt  section_doing_tasks.md  section_doing_tasks.txt  section_files.md  section_files.txt  section_identity.md  section_identity.txt  section_loop_avoidance.md  section_loop_avoidance.txt  section_output.md  section_output.txt  (+20 more)
crates/rustacle-agent/src/tools/: bash.rs  fs_edit.rs  fs_read.rs  fs_write.rs  glob.rs  grep.rs  mod.rs  registry.rs  sub_agent.rs
crates/rustacle-app/: Cargo.toml  tauri.conf.json
crates/rustacle-app/capabilities/: default.json
crates/rustacle-app/src/: lib.rs  main.rs
crates/rustacle-ipc/: Cargo.toml
crates/rustacle-ipc/src/: errors.rs  lib.rs
crates/rustacle-ipc/src/commands/: agent.rs  fs.rs  mod.rs  plugins.rs  settings.rs  system.rs  terminal.rs
crates/rustacle-ipc/src/events/: agent.rs  mod.rs  permission.rs  terminal.rs
crates/rustacle-kernel/: Cargo.toml
crates/rustacle-kernel/src/: bus.rs  demo_plugin.rs  errors.rs  kernel.rs  lib.rs  lifecycle.rs  registry.rs  state.rs
crates/rustacle-kernel/src/bus/: mod.rs  policy.rs  topics.rs
crates/rustacle-kernel/src/permission/: ask.rs  key.rs  mod.rs
crates/rustacle-llm/: Cargo.toml
crates/rustacle-llm-anthropic/: Cargo.toml
crates/rustacle-llm-anthropic/src/: lib.rs
crates/rustacle-llm-local/: Cargo.toml
crates/rustacle-llm-local/src/: discovery.rs  lib.rs
crates/rustacle-llm-openai/: Cargo.toml
crates/rustacle-llm-openai/src/: lib.rs  streaming.rs
crates/rustacle-llm/src/: lib.rs  provider.rs  registry.rs  router.rs  types.rs
crates/rustacle-plugin-api/: Cargo.toml
crates/rustacle-plugin-api/src/: capability.rs  errors.rs  lib.rs  manifest.rs  module.rs
crates/rustacle-plugin-wit/wit/: rustacle.wit
crates/rustacle-settings/: Cargo.toml
crates/rustacle-settings/src/: import_export.rs  lib.rs  schema.rs  secrets.rs  store.rs
crates/rustacle-wasm-host/: Cargo.toml
crates/rustacle-wasm-host/src/: adapter.rs  host.rs  lib.rs  linker.rs  llm_bridge.rs  loader.rs  state_migration.rs
crates/rustacle-wasm-host/tests/: component_load.rs
for_dev/: README.md  agent_reasoning.md  architecture.md  concept.md  cross_platform.md  glossary.md  knowledge_base.md  mcp_and_models.md  modularity.md  observability.md  project_structure.md  prompts_catalog.md  roadmap.md  security.md  tech_stack_2026.md  tools_catalog.md  ui_simplicity.md  ui_ux_manifesto.md
for_dev/adr/: 0001-ui-framework.md  0002-foundation-freeze.md
for_dev/planning/: README.md  S0_1_workspace_setup.md  S0_2_tauri_shell.md  S0_3_kernel_skeleton.md  S0_4_ci_pipeline.md  S0_5_adr_ui_framework.md  S1_1_ipc_types.md  S1_2_specta_bridge.md  S1_3_ui_roundtrip.md  S2_1_wit_contract.md  S2_2_wasm_host.md  S2_3_plugin_api.md  S2_4_permission_broker.md  S2_5_fs_plugin.md  S3_1_pty_backend.md  S3_2_xterm_ui.md  S3_3_event_bus_terminal.md  S4_1_llm_provider.md  S4_2_prompt_assembly.md  S4_3_harness_loop.md  S4_4_tool_dispatch.md  S4_5_agent_panel_ui.md  S5_1_settings_store.md  S5_2_keyring.md  S5_3_settings_ui.md  S5_4_import_export.md  S6_1_tab_management.md  S6_2_tool_redirection.md  S6_3_command_palette.md  S7_1_memory_plugin.md  S7_2_project_docs.md  S7_3_state_migration.md  S8_1_telemetry.md  S8_2_benchmarks.md  S8_3_packaging.md  S8_4_security_review.md
keys/: trusted_plugin_keys.toml
plugins/agent/: Cargo.toml
plugins/agent/src/: lib.rs
plugins/chat/: Cargo.toml
plugins/chat/src/: lib.rs
plugins/fs/: Cargo.toml
plugins/fs/src/: commands.rs  lib.rs
plugins/hello-js/: README.md  plugin.js
plugins/memory/: Cargo.toml
plugins/memory/src/: lib.rs
plugins/skills/: Cargo.toml
plugins/skills/src/: lib.rs
plugins/terminal/: Cargo.toml
plugins/terminal/src/: lib.rs  pty.rs  splits.rs  tab_context.rs  tabs.rs
scripts/: build-plugins.sh  check-local.sh  check-wit.sh  regen-bindings.sh  sign-plugin.sh
ui/: bindings.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  main.ts
ui/src/components/agent/: AgentPanel.tsx  ChatInput.tsx  CostBadge.tsx  ModeSelector.tsx  PermissionCard.tsx  ProfileSwitcher.tsx  ReasoningCard.tsx  ThoughtCard.tsx  ToolCallCard.tsx
ui/src/components/common/: PingButton.tsx  PluginDemo.tsx
ui/src/components/palette/: CommandPalette.tsx  PaletteEntry.ts  fuzzySearch.ts
ui/src/components/settings/: ImportExport.tsx  Keybindings.tsx  ModelProfiles.tsx  Permissions.tsx  SettingsPage.tsx  Themes.tsx
ui/src/components/terminal/: SplitTree.tsx  Tab.tsx  TabBar.tsx  TerminalPane.tsx  useKeyboardShortcuts.ts  useTerminal.ts
ui/src/state/: agent.ts  terminal.ts
