[workspace]
resolver = "3"
members = [
    "crates/rustacle-kernel",
    "crates/rustacle-ipc",
    "crates/rustacle-plugin-api",
    "crates/rustacle-wasm-host",
    "crates/rustacle-settings",
    "crates/rustacle-llm",
    "crates/rustacle-llm-openai",
    "crates/rustacle-llm-anthropic",
    "crates/rustacle-llm-local",
    "crates/rustacle-app",
    "plugins/terminal",
]
# WASM plugins (fs, chat, agent, memory, skills) are built separately
# via cargo-component with target wasm32-wasip1.
# They are NOT workspace members.
exclude = [
    "plugins/fs",
    "plugins/chat",
    "plugins/agent",
    "plugins/memory",
    "plugins/skills",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
