[package]
name = "rustacle-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rustacle-llm = { path = "../rustacle-llm" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }

[lints]
workspace = true
