[package]
name = "rustacle-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rustacle-llm = { path = "../rustacle-llm" }
async-trait = "0.1"
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
glob = "0.3"
regex-lite = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "rt", "macros", "fs", "process"] }
tokio-util = "0.7"
tracing = "0.1"
ulid = "1"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
