[package]
name = "rustacle-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
default-run = "rustacle-app"

[lib]
name = "rustacle_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rustacle-kernel = { path = "../rustacle-kernel", version = "0.1.0" }
rustacle-ipc = { path = "../rustacle-ipc", version = "0.1.0" }
tauri = { version = "2", features = [] }
tauri-specta = { version = "=2.0.0-rc.24", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.24", features = ["derive"] }
specta-typescript = "0.0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
