[package]
name = "rustacle-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
default-run = "rustacle-app"

[lib]
name = "rustacle_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rustacle-kernel = { path = "../rustacle-kernel", version = "0.1.0" }
rustacle-ipc = { path = "../rustacle-ipc", version = "0.1.0" }
rustacle-plugin-api = { path = "../rustacle-plugin-api", version = "0.1.0" }
rustacle-plugin-terminal = { path = "../../plugins/terminal" }
rustacle-agent = { path = "../rustacle-agent" }
rustacle-llm = { path = "../rustacle-llm" }
rustacle-settings = { path = "../rustacle-settings" }
tauri = { version = "2", features = [] }
tauri-specta = { version = "=2.0.0-rc.24", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.24", features = ["derive"] }
specta-typescript = "0.0.11"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
bytes = "1"
dirs = "6"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
rustacle-llm-openai = { path = "../rustacle-llm-openai" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
ulid = "1"
