[package]
name = "rustacle-kernel"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rustacle-plugin-api = { path = "../rustacle-plugin-api", version = "0.1.0" }
rustacle-settings = { path = "../rustacle-settings" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7"
thiserror = "2"
dashmap = "6"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
