[package]
name = "rustacle-llm-local"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rustacle-llm = { path = "../rustacle-llm", version = "0.1.0" }
rustacle-llm-openai = { path = "../rustacle-llm-openai", version = "0.1.0" }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
tokio-util = "0.7"
