[package]
name = "rustacle-llm-openai"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rustacle-llm = { path = "../rustacle-llm", version = "0.1.0" }
async-trait = "0.1"
futures-core = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
tokio-util = "0.7"
tracing = "0.1"
