[package]
name = "rustacle-plugin-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
semver = { version = "1", features = ["serde"] }
specta = { version = "=2.0.0-rc.24", features = ["derive"] }
thiserror = "2"
