[package]
name = "rustacle-settings"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
