[package]
name = "rustacle-plugin-fs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.36"
wit-bindgen-rt = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.component]
package = "rustacle:plugin"

[package.metadata.component.target]
path = "../../crates/rustacle-plugin-wit/wit"
world = "plugin"

[lints.clippy]
all = "warn"
