[package]
name = "rustacle-plugin-skills"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.36"

[package.metadata.component]
package = "rustacle:plugin"

[package.metadata.component.target]
path = "../../crates/rustacle-plugin-wit/wit"
world = "plugin"

[lints.clippy]
all = "warn"
