[package]
name = "rustacle-plugin-terminal"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rustacle-plugin-api = { path = "../../crates/rustacle-plugin-api", version = "0.1.0" }
async-trait = "0.1"
bytes = "1"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
